# pmdaemon

./: Cargo.toml
.github/workflows/: release.yml
src/: manager.rs
